# Document_Summerizer_ChatBot

./: .env  .gitignore  pyproject.toml
app/: main.py
